Started creating some layouts

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -1,4 +1,14 @@
 {
+  "navigation": {
+    "flat": "ბინა",
+    "renovation": "რემონტი",
+    "furniture": "ავეჯი",
+    "decoration": "დეკორეი",
+    "supply": "ტექნიკა"
+  },
+  "sidebar": {
+    "logo_meta": "m2 Some text"
+  },
   "links": {
     "home": "Home"
   },
