created flat navigation visual

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -3,7 +3,7 @@
     "flat": "ბინა",
     "renovation": "რემონტი",
     "furniture": "ავეჯი",
-    "decoration": "დეკორეი",
+    "decoration": "დეკორი",
     "supply": "ტექნიკა"
   },
   "sidebar": {
