added app view on default view

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -19,5 +19,9 @@
   "about": {
     "title": "About",
     "introduction": "..."
+  },
+  "buttons": {
+    "next": "შემდეგი",
+    "faq": "ხშირად დასმული კითხვები"
   }
 }
