--- a/locales/ka.json
+++ b/locales/ka.json
@@ -33,5 +33,8 @@
     "Furniture": "ავეჯი",
     "Decor": "დეკორ",
     "Supply": "ტექნიკა"
+  },
+  "titles": {
+    "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი"
   }
 }
