created some main layouts for flat/firstPage, also created some reusable components

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -32,9 +32,15 @@
     "Renovation": "რემონტი",
     "Furniture": "ავეჯი",
     "Decor": "დეკორ",
-    "Supply": "ტექნიკა"
+    "Supply": "ტექნიკა",
+    "Render": "რენდერი",
+    "Plan": "ნახაზი"
   },
   "titles": {
     "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი"
+  },
+  "rooms": {
+    "Hall": "ჰოლი",
+    "Bedroom": "საძინებელი"
   }
 }
