fix: technic small style changes

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -37,7 +37,8 @@
     "Plan": "ნახაზი"
   },
   "titles": {
-    "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი"
+    "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
+    "SupplyPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი"
   },
   "rooms": {
     "Hall": "ჰოლი",
