Added magnifying button for slider and other images

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -22,7 +22,8 @@
   },
   "buttons": {
     "next": "შემდეგი",
-    "faq": "ხშირად დასმული კითხვები"
+    "faq": "ხშირად დასმული კითხვები",
+    "CLOSE": "დახურვა"
   },
   "labels": {
     "FullArea": "სრული ფართი",
@@ -38,7 +39,8 @@
   },
   "titles": {
     "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
-    "SupplyPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი"
+    "SupplyPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
+    "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები"
   },
   "rooms": {
     "Hall": "ჰოლი",
