inplemented choose flat functionality and started to connect componnets to real data

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -35,7 +35,10 @@
     "Decor": "დეკორ",
     "Supply": "ტექნიკა",
     "Render": "რენდერი",
-    "Plan": "ნახაზი"
+    "Plan": "ნახაზი",
+    "appliances": "ტექნიკა",
+    "furniture": "ავეჯი",
+    "m2": "მ²"
   },
   "titles": {
     "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
