added some testS

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -38,6 +38,8 @@
     "Plan": "ნახაზი",
     "appliances": "ტექნიკა",
     "furniture": "ავეჯი",
+    "flat": "სრული ფართი",
+    "balcony": "ვერანდა",
     "m2": "მ²"
   },
   "titles": {
