added some real rooms data and some tests

--- a/locales/en.json
+++ b/locales/en.json
@@ -31,6 +31,8 @@
     "Plan": "Plan",
     "appliances": "Appliances",
     "furniture": "Furniture",
+    "bedrooms": "Bedrooms",
+    "bedroom": "Bedroom",
     "flat": "Flat",
     "balcony": "Balcony",
     "m2": "m²"
