--- a/locales/ka.json
+++ b/locales/ka.json
@@ -43,6 +43,8 @@
     "appliances": "ტექნიკა",
     "furniture": "ავეჯი",
     "flat": "სრული ფართი",
+    "bedrooms": "საძინებლები",
+    "bedroom": "საძინებელი",
     "balcony": "ვერანდა",
     "m2": "მ²"
   },
@@ -53,6 +55,10 @@
   },
   "rooms": {
     "Hall": "ჰოლი",
-    "Bedroom": "საძინებელი"
+    "Bedroom": "საძინებელი",
+    "living_room": "მისაღები ოთახი",
+    "bedroom": "საძინებელი",
+    "hall": "ჰოლი",
+    "bathroom": "სააბაზანო"
   }
 }
