--- a/locales/ka.json
+++ b/locales/ka.json
@@ -46,7 +46,8 @@
     "bedrooms": "საძინებლები",
     "bedroom": "საძინებელი",
     "balcony": "ვერანდა",
-    "m2": "მ²"
+    "m2": "მ²",
+    "appliancePrice": "ტექნიკის ფასი"
   },
   "titles": {
     "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
@@ -59,6 +60,7 @@
     "living_room": "მისაღები ოთახი",
     "bedroom": "საძინებელი",
     "hall": "ჰოლი",
+    "kitchen": "სამზარეულო",
     "bathroom": "სააბაზანო"
   }
 }
