--- a/locales/ka.json
+++ b/locales/ka.json
@@ -70,7 +70,7 @@
     "bedroom": "საძინებელი",
     "living_room": "მისაღები ოთახი",
     "hall": "ჰოლი",
-    "balcony": "ჰოლი",
+    "balcony": "ვერანდა",
     "kitchen": "სამზარეულო",
     "bathroom": "სააბაზანო",
     "wc": "სააბაზანო"
