--- a/locales/ka.json
+++ b/locales/ka.json
@@ -42,7 +42,7 @@
     "Plan": "ნახაზი",
     "appliances": "ტექნიკა",
     "furniture": "ავეჯი",
-    "flat": "სრული ფართი",
+    "flat": "ბინა",
     "bedrooms": "საძინებლები",
     "bedroom": "საძინებელი",
     "balcony": "ვერანდა",
