fixed prices array

--- a/locales/en.json
+++ b/locales/en.json
@@ -45,6 +45,7 @@
     "furniture_price": "Furniture Price",
     "decoration_price": "Decoration Price",
     "appliances_price": "Appliance Price",
+    "appliance": "Appliance",
     "full_price": "Full Price"
   },
   "titles": {
