--- a/locales/ka.json
+++ b/locales/ka.json
@@ -57,6 +57,7 @@
     "furniture_price": "ავეჯის ფასი",
     "decoration_price": "დეკორის ფასი",
     "appliances_price": "ტექნიკა ფასი",
+    "appliance": "ტექნიკა",
     "full_price": "სრული ფასი"
 
   },
