added some tests and static data and corrected maximize image tests

--- a/locales/en.json
+++ b/locales/en.json
@@ -26,6 +26,7 @@
     "Renovation": "Renovation",
     "Furniture": "Furniture",
     "Decor": "Decoration",
+    "decoration": "Decoration",
     "Supply": "Supply",
     "Render": "Render",
     "Plan": "Plan",
