separated apps for renovations and models

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "apps": {
+    "renovation": "Replications App",
+    "model": "Model App"
+  },
   "languages": {
     "ka": "ქარ",
     "en": "ENG"
