--- a/locales/ka.json
+++ b/locales/ka.json
@@ -1,4 +1,8 @@
 {
+  "apps": {
+    "renovation": "რეპლიკების აპლიკაცია",
+    "model": "მაკეტის აპლიკაცია"
+  },
   "languages": {
     "ka": "ქარ",
     "en": "ENG"
