--- a/locales/ka.json
+++ b/locales/ka.json
@@ -36,7 +36,8 @@
     "next": "შემდეგი",
     "faq": "ხშირად დასმული კითხვები",
     "CLOSE": "დახურვა",
-    "see": "ნახე"
+    "see": "ნახე",
+    "skip": "გამოტოვება"
   },
   "labels": {
     "FullArea": "სრული ფართი",
@@ -52,6 +53,9 @@
     "appliances": "ტექნიკა",
     "furniture": "ავეჯი",
     "flat": "ბინა",
+    "flats_based_on_filters": "შენი პასუხების მიხედვით შერჩეული",
+    "sold_flat_count": "გაყიდული ბინების რაოდენობა:",
+    "building_progress": "მშენებლობის სტატუსი:",
     "bedrooms": "საძინებლები",
     "bedroom": "საძინებელი",
     "balcony": "ვერანდა",
