--- a/locales/ka.json
+++ b/locales/ka.json
@@ -91,6 +91,7 @@
     "SupplyPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
     "SearchByFlatNumber": "ბინის ნომრით ძებნა",
     "SearchByFlatNumberSubTitle": "ჩაწერეთ თქვენს მიერ შერჩეული ბინის ნომერი",
+    "flat-list-result-title": "თქვენს მიერ არჩეული კრიტერიუმების მიხედვით მოიძებნა %s ბინა",
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები"
   },
   "rooms": {
