--- a/locales/ka.json
+++ b/locales/ka.json
@@ -84,14 +84,18 @@
     "appliance": "ტექნიკა",
     "full_price": "სრული ფასი",
     "min": "მინ.",
-    "max": "მაქს."
+    "max": "მაქს.",
+    "ByPhoneNumber": "ავტორიზაცია ტელეფონის ნომრით",
+    "ByFlatNumber": "ბინის ნომრით ძებნა",
+    "ByFilter": "ფილტრით ძებნა"
   },
   "titles": {
     "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
     "SupplyPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
     "SearchByFlatNumber": "ბინის ნომრით ძებნა",
     "SearchByFlatNumberSubTitle": "ჩაწერეთ თქვენს მიერ შერჩეული ბინის ნომერი",
-    "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები"
+    "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
+    "ModelIndexPage": "რაღაც სათაური იქნება აქ"
   },
   "rooms": {
     "Hall": "ჰოლი",
@@ -107,5 +111,8 @@
   "addresses": {
     "marshal_gelovani": "მარშალ გელოვანი",
     "m3_gelovani": "მ3 გელოვანი"
+  },
+  "descriptions": {
+    "ModelIndexPage": "რაღაც გრძელი ტექსტი იქნება აქ"
   }
 }
