Added flat list page

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -45,8 +45,15 @@
     "FlatArea": "ბინის ფართი",
     "BalconyArea": "აივნის ფართი",
     "FullPrice": "სრული ფასი",
+    "LitIt": "გაანათე",
+    "LitUpAll": "გაანათე ყველა",
     "address": "მისამართი",
     "Renovation": "რემონტი",
+    "floor": "სართული",
+    "number": "ნომერი",
+    "status": "სტატუსი",
+    "view": "ხედი",
+    "area": "ფართი",
     "projects": "პროექტები",
     "pick_range": "აირჩიეთ რეინჯი",
     "project": "პროექტი",
