Added some filters needs fixing on backeng

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -100,6 +100,7 @@
     "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
     "SupplyPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
     "SearchByFlatNumber": "ბინის ნომრით ძებნა",
+    "YouCanSelectMultipe": "შეგიძლიათ აანთოთ რამოდენიმე",
     "SearchByFlatNumberSubTitle": "ჩაწერეთ თქვენს მიერ შერჩეული ბინის ნომერი",
     "flat-list-result-title": "თქვენს მიერ არჩეული კრიტერიუმების მიხედვით მოიძებნა %s ბინა",
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
