added filter backend for filter pages

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -46,6 +46,7 @@
     "BalconyArea": "აივნის ფართი",
     "FullPrice": "სრული ფასი",
     "LitIt": "გაანათე",
+    "floorShort": "სარ.",
     "LitUpAll": "გაანათე ყველა",
     "address": "მისამართი",
     "Renovation": "რემონტი",
