created single flat file

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -47,10 +47,13 @@
     "FullPrice": "სრული ფასი",
     "LitIt": "გაანათე",
     "floorShort": "სარ.",
+    "ongoing": "მიმდინარე",
     "LitUpAll": "გაანათე ყველა",
     "address": "მისამართი",
     "Renovation": "რემონტი",
     "floor": "სართული",
+    "entrance": "შესასვლელი",
+    "block": "ბლოკი",
     "number": "ნომერი",
     "status": "სტატუსი",
     "view": "ხედი",
@@ -101,6 +104,7 @@
     "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
     "SupplyPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
     "SearchByFlatNumber": "ბინის ნომრით ძებნა",
+    "YourChosenFlat": "შენს მიერ შერჩეული ბინა",
     "ByFlatNumberButtonsTitle": "ან გააგრძელე ძებნა შემდეგი მეთოდებით",
     "YouCanSelectMultipe": "შეგიძლიათ აანთოთ რამოდენიმე",
     "SearchByFlatNumberSubTitle": "ჩაწერეთ თქვენს მიერ შერჩეული ბინის ნომერი",
