added back button

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -46,6 +46,7 @@
     "BalconyArea": "აივნის ფართი",
     "FullPrice": "სრული ფასი",
     "LitIt": "გაანათე",
+    "back": "უკან",
     "floorShort": "სარ.",
     "ongoing": "მიმდინარე",
     "LitUpAll": "გაანათე ყველა",
