Added real filter data frtom backend

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -50,6 +50,7 @@
     "floorShort": "სარ.",
     "ongoing": "მიმდინარე",
     "LitUpAll": "გაანათე ყველა",
+    "FlatsLeftInThisBlock": "ამ ბლოკში დარჩენილია",
     "address": "მისამართი",
     "Renovation": "რემონტი",
     "floor": "სართული",
