--- a/locales/ka.json
+++ b/locales/ka.json
@@ -47,6 +47,7 @@
     "FullPrice": "სრული ფასი",
     "LitIt": "გაანათე",
     "back": "უკან",
+    "balcony_area_slash_terrace": "აივანი/ტერასა",
     "floorShort": "სარ.",
     "ongoing": "მიმდინარე",
     "LitUpAll": "გაანათე ყველა",
@@ -88,7 +89,7 @@
     "m2": "მ²",
     "appliancePrice": "ტექნიკის ფასი",
     "total_area": "სრული ფართი",
-    "flat_area": "ბინის ფართი",
+    "flat_area": "საცხოვრებელი",
     "balcony_area": "ვერანდა",
     "flat_price": "ბინის ფასი",
     "furniture_price": "ავეჯის ფასი",
