Fix flat floating number bugs

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -134,15 +134,15 @@
     "ModelIndexPage": "რაღაც გრძელი ტექსტი იქნება აქ"
   },
   "alerts": {
-    "planshetColorAlert": "ამ ბლოკის სანახავად  მიბრძანდით %s ფერის სივრცეში მეხუთე პლანშეტთან"
+    "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში მეხუთე პლანშეტთან"
   },
   "colors": {
-    "orange": "ნარინჯისფერი",
-    "purple": "იასამნისფერი",
-    "blue": "ლურჯი",
+    "orange": "ნარინჯისფერ",
+    "purple": "იასამნისფერ",
+    "blue": "ლურჯ",
     "green": "მწვანე",
-    "red": "წითელი",
-    "yellow": "ყვითელი",
-    "pink": "ვარდისფერი"
+    "red": "წითელ",
+    "yellow": "ყვითელ",
+    "pink": "ვარდისფერ"
   }
 }
