Edit model index page texts

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -114,7 +114,7 @@
     "SearchByFlatNumberSubTitle": "ჩაწერეთ თქვენს მიერ შერჩეული ბინის ნომერი",
     "flat-list-result-title": "თქვენს მიერ არჩეული კრიტერიუმების მიხედვით <br><span class=\"color-orange\">მოიძებნა %s ბინა</span>",
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
-    "ModelIndexPage": "ბინის შერჩევა იწყება აქ! შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას"
+    "ModelIndexPage": "ბინის შერჩევა იწყება აქ!"
   },
   "rooms": {
     "Hall": "ჰოლი",
@@ -132,7 +132,7 @@
     "m3_gelovani": "მ3 გელოვანი"
   },
   "descriptions": {
-    "ModelIndexPage": "თქვენს წინაშეა m2-ის ახალი უბანი m3 საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.\nშერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე"
+    "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას. თქვენს წინაშეა m2-ის ახალი უბანი m3 საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.\nშერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე"
   },
   "alerts": {
     "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში მეხუთე პლანშეტთან"
