--- a/locales/en.json
+++ b/locales/en.json
@@ -119,7 +119,8 @@
     "wc": "Bathroom"
   },
   "descriptions": {
-    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m2 - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find the concept of the district m3 and your chosen home on the house model."
+    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m2 - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find the concept of the district m3 and your chosen home on the house model.",
+    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m2 - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the district of m3."
   },
   "alerts": {
     "planshetColorAlert": "To light up this flat please proceed to %s area"
