--- a/locales/ka.json
+++ b/locales/ka.json
@@ -132,7 +132,8 @@
     "m3_gelovani": "მ3 გელოვანი"
   },
   "descriptions": {
-    "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m2-ის ახალი უბანი m3 საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>შერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე."
+    "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m2-ის ახალი უბანი m3 საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>შერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე.",
+    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m2-ის ახალი უბანი m3 საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა მ3 ის ახალ უბანში."
   },
   "alerts": {
     "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში მეხუთე პლანშეტთან"
