Added alert on flat page

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -136,7 +136,7 @@
     "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m2-ის ახალი უბანი m3 საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა მ3 ის ახალ უბანში."
   },
   "alerts": {
-    "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში მეხუთე პლანშეტთან"
+    "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში %n პლანშეტთან"
   },
   "colors": {
     "orange": "ნარინჯისფერ",
@@ -145,6 +145,13 @@
     "green": "მწვანე",
     "red": "წითელ",
     "yellow": "ყვითელ",
-    "pink": "ვარდისფერ"
+    "pink": "ვარდისფერ",
+    "first": "პირველ",
+    "second": "მეორე",
+    "third": "მესამე",
+    "fourth": "მეოთხე",
+    "fifth": "მეხუთე",
+    "sixth": "მეექვსე",
+    "seventh": "მეშვიდე"
   }
 }
