Style: Fix many issues

--- a/locales/en.json
+++ b/locales/en.json
@@ -104,7 +104,7 @@
     "YourChosenFlat": "Your chosen flat"
   },
   "addresses": {
-    "marshal_gelovani": "Marshal Gelovani",
+    "marshal_gelovani": "Marshal Gelovani Avenue",
     "m3_gelovani": "m3 Gelovani"
   },
   "rooms": {
