--- a/locales/ka.json
+++ b/locales/ka.json
@@ -128,7 +128,7 @@
     "wc": "სააბაზანო"
   },
   "addresses": {
-    "marshal_gelovani": "მარშალ გელოვანი",
+    "marshal_gelovani": "მარშალ გელოვანის გამზირი",
     "m3_gelovani": "მ3 გელოვანი"
   },
   "descriptions": {
