Display flat prices from DB

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -19,7 +19,7 @@
     "view": "ხედი"
   },
   "sidebar": {
-    "logo_meta": "m2 Some text"
+    "logo_meta": "m² Some text"
   },
   "links": {
     "home": "Home"
@@ -62,7 +62,7 @@
     "view": "ხედი",
     "area": "ფართი",
     "projects": "პროექტები",
-    "pick_range": "აირჩიეთ რეინჯი",
+    "pick_range": "აირჩიეთ დიაპაზონი",
     "project": "პროექტი",
     "select_flat_and_lit_it_up": "აირჩიე პროექტი და გაანათე",
     "select_only_one": "აირჩიე მხოლოდ ერთი",
@@ -129,11 +129,11 @@
   },
   "addresses": {
     "marshal_gelovani": "მარშალ გელოვანის გამზირი",
-    "m3_gelovani": "მ3 გელოვანი"
+    "m3_gelovani": "m³ საბურთალო"
   },
   "descriptions": {
-    "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m2-ის ახალი უბანი m3 საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>შერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე.",
-    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m2-ის ახალი უბანი m3 საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა მ3 ის ახალ უბანში."
+    "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>შერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე.",
+    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა მ3 ის ახალ უბანში."
   },
   "alerts": {
     "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში %n პლანშეტთან"
