--- a/locales/en.json
+++ b/locales/en.json
@@ -19,7 +19,7 @@
     "view": "View"
   },
   "sidebar": {
-    "logo_meta": "m2 Some text"
+    "logo_meta": "m² Some text"
   },
   "buttons": {
     "next": "NEXT",
@@ -105,7 +105,7 @@
   },
   "addresses": {
     "marshal_gelovani": "Marshal Gelovani Avenue",
-    "m3_gelovani": "m3 Gelovani"
+    "m3_gelovani": "m³ Saburtalo"
   },
   "rooms": {
     "Hall": "Hall",
@@ -119,8 +119,8 @@
     "wc": "Bathroom"
   },
   "descriptions": {
-    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m2 - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find the concept of the district m3 and your chosen home on the house model.",
-    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m2 - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the district of m3."
+    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find the concept of the district m³ and your chosen home on the house model.",
+    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the district of m³."
   },
   "alerts": {
     "planshetColorAlert": "To light up this flat please proceed to %s area"
