--- a/locales/ka.json
+++ b/locales/ka.json
@@ -133,7 +133,7 @@
   },
   "descriptions": {
     "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>შერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე.",
-    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა მ3 ის ახალ უბანში."
+    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m³ ის ახალ უბანში."
   },
   "alerts": {
     "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში %n პლანშეტთან"
