Replace applications texts. Hide FAQ's button

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -105,8 +105,11 @@
     "ByFilter": "ფილტრით ძებნა"
   },
   "titles": {
-    "FlatPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
-    "SupplyPageTitle": "რეპლიკაზე წარმოდგენილი რემონტი",
+    "FlatPageTitleGinger": "რემონტი ჯინჯერი",
+    "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
+    "FlatPageTitleMuscat": "რემონტი მუსკატი",
+    "FlatPageTitleVanilla": "რემონტი ვანილი",
+    "FlatPageTitleUlumbo": "რემონტი ულუმბო",
     "SearchByFlatNumber": "ბინის ნომრით ძებნა",
     "YourChosenFlat": "შენს მიერ შერჩეული ბინა",
     "ByFlatNumberButtonsTitle": "ან გააგრძელე ძებნა შემდეგი მეთოდებით",
@@ -133,7 +136,7 @@
   },
   "descriptions": {
     "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>შერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე.",
-    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m³ ის ახალ უბანში."
+    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო."
   },
   "alerts": {
     "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში %n პლანშეტთან"
