Fix: Flat titles and flat prices styles

--- a/locales/en.json
+++ b/locales/en.json
@@ -92,11 +92,11 @@
     "ByFilter": "Search by filter"
   },
   "titles": {
-    "FlatPageTitleGinger": "Renovation ginger",
-    "FlatPageTitleCinnamon": "Renovation cinnamon",
-    "FlatPageTitleMuscat": "Renovation muscat",
-    "FlatPageTitleVanilla": "Renovation vanilla",
-    "FlatPageTitleUlumbo": "Renovation ulumbo",
+    "FlatPageTitleGinger": "Design ginger",
+    "FlatPageTitleCinnamon": "Design cinnamon",
+    "FlatPageTitleMuscat": "Design muscat",
+    "FlatPageTitleVanilla": "Design vanilla",
+    "FlatPageTitleUlumbo": "Design ulumbo",
     "FrequentlyAskedQuestions": "Frequently Asked Question",
     "SearchByFlatNumber": "Search by flat number",
     "SearchByFlatNumberSubTitle": "Fill in your chosen flat number",
