--- a/locales/en.json
+++ b/locales/en.json
@@ -122,7 +122,7 @@
     "wc": "Bathroom"
   },
   "descriptions": {
-    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find the concept of the district m³ and your chosen home on the house model.",
+    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo.",
     "ModelMainIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo."
   },
   "alerts": {
