--- a/locales/ka.json
+++ b/locales/ka.json
@@ -135,7 +135,7 @@
     "m3_gelovani": "m³ საბურთალო"
   },
   "descriptions": {
-    "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>შერჩეული ბინა და უბნის სრული კონცეფცია შეგიძლიათ იხილოთ მაკეტზე.",
+    "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
     "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო."
   },
   "alerts": {
