--- a/locales/ka.json
+++ b/locales/ka.json
@@ -7,6 +7,11 @@
     "ka": "ქარ",
     "en": "ENG"
   },
+  "errors": {
+    "NameFieldIsRequired": "სახელის ველი აუცილებელია",
+    "PhoneFieldIsRequired": "ტელეფონის ველი აუცილებელია და უნდა იყოს რიცხვები",
+    "emailIsNotValid": "ელ-ფოსტის ველი აუცილებელია და უნდა იყოს სწორი ფორმატით"
+  },
   "navigation": {
     "flat": "ბინა",
     "renovation": "რემონტი",
@@ -36,6 +41,7 @@
     "next": "შემდეგი",
     "faq": "ხშირად დასმული კითხვები",
     "CLOSE": "დახურვა",
+    "register": "რეგისტრაცია",
     "see": "ნახე",
     "skip": "გამოტოვება",
     "search": "ძებნა"
@@ -43,6 +49,9 @@
   "labels": {
     "FullArea": "სრული ფართი",
     "FlatArea": "ბინის ფართი",
+    "name": "სახელი და გვარი",
+    "phone": "ტელეფონის ნომერი",
+    "email": "ელ-ფოსტა",
     "BalconyArea": "აივნის ფართი",
     "FullPrice": "სრული ფასი",
     "LitIt": "გაანათე",
@@ -109,6 +118,7 @@
     "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
     "FlatPageTitleMuscat": "რემონტი მუსკატი",
     "FlatPageTitleVanilla": "რემონტი ვანილი",
+    "FillPrivateInformation": "შეავსეთ პირადი ინფორმაცია",
     "FlatPageTitleUlumbo": "რემონტი ულუმბო",
     "SearchByFlatNumber": "ბინის ნომრით ძებნა",
     "YourChosenFlat": "შენს მიერ შერჩეული ბინა",
