started working on sales app

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -1,6 +1,7 @@
 {
   "apps": {
     "renovation": "რეპლიკების აპლიკაცია",
+    "sales": "გაყიდვების აპლიკაცია",
     "model": "მაკეტის აპლიკაცია"
   },
   "languages": {
