--- a/locales/ka.json
+++ b/locales/ka.json
@@ -11,7 +11,8 @@
   "errors": {
     "NameFieldIsRequired": "სახელის ველი აუცილებელია",
     "PhoneFieldIsRequired": "ტელეფონის ველი აუცილებელია და უნდა იყოს რიცხვები",
-    "emailIsNotValid": "ელ-ფოსტის ველი აუცილებელია და უნდა იყოს სწორი ფორმატით"
+    "emailIsNotValid": "ელ-ფოსტის ველი აუცილებელია და უნდა იყოს სწორი ფორმატით",
+    "CodeFieldIsRequired": "კოდის ველი აუცილებელია და უნდა იყოს სწორი ფორმატით"
   },
   "navigation": {
     "flat": "ბინა",
@@ -45,6 +46,7 @@
     "register": "რეგისტრაცია",
     "see": "ნახე",
     "skip": "გამოტოვება",
+    "ConfirmPhone": "რეგისტრაცია",
     "search": "ძებნა"
   },
   "labels": {
@@ -52,6 +54,7 @@
     "FlatArea": "ბინის ფართი",
     "name": "სახელი და გვარი",
     "phone": "ტელეფონის ნომერი",
+    "SendCodeAgain": "ახლიდან გაგზავნა",
     "email": "ელ-ფოსტა",
     "BalconyArea": "აივნის ფართი",
     "FullPrice": "სრული ფასი",
@@ -118,6 +121,8 @@
     "FlatPageTitleGinger": "რემონტი ჯინჯერი",
     "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
     "FlatPageTitleMuscat": "რემონტი მუსკატი",
+    "YouWillRecieveCode": "კოდს მიიღებთ ტელეფონის ნომერზე",
+    "CodeWasSentTo": "კოდი გამოგზავნილია ნომერზე: <span class=\"color-orange\">%s</span>",
     "FlatPageTitleVanilla": "რემონტი ვანილი",
     "FillPrivateInformation": "შეავსეთ პირადი ინფორმაცია",
     "FlatPageTitleUlumbo": "რემონტი ულუმბო",
